[gd_scene load_steps=7 format=3 uid="uid://cleeig3com4qf"]

[ext_resource type="Script" uid="uid://d0xwfs7lmnnfb" path="res://room_transition.gd" id="1_fag3s"]
[ext_resource type="Texture2D" uid="uid://cclcrogrd65dm" path="res://Hana Caraka - Fantasy Interior [sample]/Props/door.png" id="2_ycmyt"]
[ext_resource type="FontFile" uid="uid://bu7js3732vtji" path="res://Pixuf.ttf" id="3_ycmyt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aec10"]
size = Vector2(20, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fag3s"]
radius = 15.0
height = 72.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycmyt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="Enter_Room" type="Area2D"]
script = ExtResource("1_fag3s")
targetScene = "uid://b7g6oatf0cxck"
targetSpawn = "Spawn_Room9"

[node name="Door" type="Sprite2D" parent="."]
texture = ExtResource("2_ycmyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_aec10")

[node name="Spawn_Main" type="Marker2D" parent="."]
position = Vector2(0, 25)

[node name="PopupArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PopupArea2D"]
position = Vector2(0, 26)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fag3s")
debug_color = Color(0.800602, 0.420288, 0, 0.42)

[node name="RoomPopup" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -36.0
offset_right = 22.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ycmyt")

[node name="RoomLabel" type="Label" parent="RoomPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ycmyt")
theme_override_font_sizes/font_size = 8
text = "Room #"
horizontal_alignment = 1
